--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/public/styles/style.css">
     <title>Document</title>
     </style>
 </head>
 <body>
-        <h1>Hello world</h1>
-        <h1>Bye</h1>
+    <nav>
+        <a href="#" class="logo">
+            <img src="https://via.placeholder.com/35" alt="w-logo">
+            MyWebsite
+        </a>
 
-        <div class="container">
-            <a href="aboba.html">Press this beautiful button</a><br> 
+        <div class="nav-links">
+            <a href="#">About us</a>
+            <a href="#">Docs</a>
+            <a href="#">Services</a>
+            <a href="#">Contact</a>
+            <a href="#">GitHub</a>
         </div>
-        <a href="amongus.html">hi</a>
+    </nav>
 </body>
 </html>
