--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,1 +1,48 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,400;0,700;1,400&display=swap');
+
+:root {
+    --color-primary: #2d2a3f;
+    --color-secondary: #ffe1ff;
+}
+
+body {
+    margin: 0 0;
+    font-family: 'Poppins', sans-serif;
+
+    nav {
+        padding: 15px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: var(--color-primary);
+
+        .logo {
+            display: flex;
+            gap: 10px;
+            color: white;
+            color: var(--color-secondary);
+            text-decoration: none;
+        }
+
+        .nav-links {
+            display: flex;
+            gap: 20px;
+
+            a {
+                padding: 5px;
+                color: var(--color-secondary);
+                text-decoration: none;
+
+                border: 1px solid var(--color-primary);
+                border-radius: 5px;
+                transition: 0.3s ease-out;
+            }
+
+            a:hover {
+                border-color: var(--color-secondary);
+                background-color: var(--color-secondary);
+                color: var(--color-primary);
+            }
+        }
+    }
+}
