--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="assets/icon.svg">
     <link rel="stylesheet" href="/public/styles/style.css">
-    <title>Document</title>
+    <title>Course Makery</title>
     </style>
 </head>
-<body>
-    <nav>
-        <a href="#" class="logo">
-            <img src="https://via.placeholder.com/35" alt="w-logo">
-            MyWebsite
-        </a>
 
-        <div class="nav-links">
-            <a href="#">About us</a>
-            <a href="#">Docs</a>
-            <a href="#">Services</a>
-            <a href="#">Contact</a>
-            <a href="#">GitHub</a>
+<body>
+    <header>
+        <nav>
+            <a href="/" class="logo">
+                <img src="assets/icon.svg" alt="w-logo">
+                MyWebsite
+            </a>
+
+            <div class="nav-links">
+                <a href="#">About us</a>
+                <a href="#">Docs</a>
+                <a href="#">Services</a>
+                <a href="#">Feedback</a>
+                <a href="https://github.com/m1ss1onBest/my-web">GitHub</a>
+            </div>
+        </nav>
+        <div class="header-space centered">
+            <h2>Course Makery</h2>
+            <p>The best website to waste your money on useless paid IT-courses. You will learn how to tell tell everyone that you're programmer when you're not.</p>
         </div>
-    </nav>
+    </header>
 </body>
 </html>
