--- a/src/views/index.html
+++ b/src/views/index.html
@@ -24,8 +24,9 @@
                 <a href="#">Docs</a>
                 <a href="#">Services</a>
                 <a href="#">Feedback</a>
-                <a href="https://github.com/m1ss1onBest/my-web">GitHub</a>
+                <a id="gh-link" href="https://github.com/m1ss1onBest/my-web"><img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg" alt="github_logo"></a>
             </div>
+
         </nav>
         <div class="header-space centered">
             <h2>Course Makery</h2>
