improve navbar design

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,13 +16,13 @@
         <nav>
             <a href="/" class="logo">
                 <img src="assets/icon.svg" alt="w-logo">
-                MyWebsite
+                Course Makery
             </a>
 
             <div class="nav-links">
                 <a href="#">About us</a>
                 <a href="#">Docs</a>
-                <a href="#">Services</a>
+                <a href="#">Funny pics</a>
                 <a href="#">Feedback</a>
                 <a id="gh-link" href="https://github.com/m1ss1onBest/my-web"><img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg" alt="github_logo"></a>
             </div>
@@ -30,8 +30,14 @@
         </nav>
         <div class="header-space centered">
             <h2>Course Makery</h2>
-            <p>The best website to waste your money on useless paid IT-courses. You will learn how to tell tell everyone that you're programmer when you're not.</p>
+            <p>The best way to waste your money on useless paid IT-courses. Learn about how to tell everyone that you're programmer when you're not.</p>
+        </div>
+        <div class="buy-course-buttons">
+            <a href="#">Go buy a course</a>
+            <a href="#">Go buy a course</a>
+            <a href="#">Go buy a course</a>
         </div>
     </header>
+    <div class="break-line">
 </body>
 </html>
