--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,109 +7,140 @@
     --color-main: #2c2c2f;
     --color-text: #ffffff;
 
+    --color-bg-gradient1: #e23b38;
+    --color-bg-gradient2: #e23865;
+
     --font-weight-normal: 600;
 
     --font-size-xl: 30px;
     --font-size-xxl: 40px;
     --font-size-l: 25px;
+    --font-size-m: 17px;
 }
 
 body {
     background-color: var(--color-main);
     margin: 0 0;
     font-family: 'Poppins', sans-serif;
+}
 
-    header {
-        nav {
-            padding-bottom: 15px;
-            padding-top: 45px;
+header {
+    // background-color: var(--color-primary);
+    background: linear-gradient(var(--color-bg-gradient1), var(--color-bg-gradient2));
+    box-shadow: 0 5px 10px rgb(38, 38, 38);
+
+    nav {
+        padding-bottom: 15px;
+        padding-top: 45px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+
+        .logo {
             display: flex;
-            justify-content: space-around;
             align-items: center;
-            background-color: var(--color-primary);
+            gap: 10px;
 
-            .logo {
+            text-decoration: none;
+            color: var(--color-text);
+            font-weight: var(--font-weight-normal);
+
+            img {
+                height: 35px;
+                border-radius: 5px;
+            }
+        }
+
+        .nav-links {
+            display: flex;
+            align-items: center;
+            gap: 20px;
+
+            a {
                 display: flex;
-                align-items: center;
-                gap: 10px;
-
+                padding: 5px;
                 text-decoration: none;
                 color: var(--color-text);
                 font-weight: var(--font-weight-normal);
+                // border-radius: 5px;
+                transition: 0.3s ease-out;
+            }
+
+            #gh-link {
+                border-radius: 50%;
 
                 img {
                     height: 35px;
-                    border-radius: 5px;
-                }
-            }
-
-            .nav-links {
-                display: flex;
-                align-items: center;
-                gap: 20px;
-
-
-                a {
-                    display: flex;
-                    padding: 5px;
-                    text-decoration: none;
-
-                    color: var(--color-text);
-                    font-weight: var(--font-weight-normal);
-                    border: 1px solid var(--color-primary);
-                    border-radius: 5px;
-
-                    transition: 0.3s ease-out;
-                }
-
-                #gh-link {
                     border-radius: 50%;
-
-                    img {
-                        height: 35px;
-                        border-radius: 50%;
-                    }
-
-                    img:hover {
-                        filter: invert(1);
-                    }
                 }
+            }
 
-                a:hover {
-                    border-color: var(--color-secondary);
-                    background-color: var(--color-secondary);
-                    color: var(--color-primary);
+            #gh-link:hover {
+                img {
+                    filter: invert(1);
                 }
-
             }
+
+            a:hover {
+                // border-color: var(--color-secondary);
+                text-decoration: underline;
+                // background-color: var(--color-secondary);
+                // color: var(--color-primary);
+            }
+
+        }
+    }
+
+    .header-space {
+        color: white;
+        padding-bottom: 35px;
+        padding-top: 15px;
+
+        h2 {
+            font-size: var(--font-size-xxl);
+            margin: 0;
         }
 
-        .header-space {
-            background-color: var(--color-primary);
-            color: white;
-            padding-bottom: 45px;
-            padding-top: 15px;
-
-            .centered {
-                width: 40%;
-                align-self: center;
-                align-items: center;
-            }
-
-            h2 {
-                font-size: var(--font-size-xxl);
-                margin: 0;
-            }
-
-            p {
-                font-size: var(--font-size-l);
-                margin: auto;
-                width: 47%;
-            }
+        p {
+            font-size: var(--font-size-l);
+            margin: auto;
+            width: 47%;
         }
+    }
 
-        .centered {
-            text-align: center;
-        }
+    .centered {
+        text-align: center;
+    }
+}
+
+.buy-course-buttons {
+    padding-bottom: 100px;
+    gap: 45px;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    a {
+        padding: 5px;
+        padding-left: 15px;
+        padding-right: 15px;
+
+        background: 0%;
+        border: 3px solid white;
+        border-radius: 5px;
+
+        font-family: 'Poppins', sans-serif;
+        font-weight: 600;
+        font-size: var(--font-size-m);
+        color: var(--color-secondary);
+        text-decoration: none;
+        transition: 0.3s ease-out;
+    }
+
+    a:hover {
+        color: var(--color-primary);
+        background-color: var(--color-secondary);
     }
 }
