--- a/src/views/index.html
+++ b/src/views/index.html
@@ -37,6 +37,7 @@
             <a href="#">Go buy a course</a>
             <a href="#">Go buy a course</a>
         </div>
+        <p class="vacant-places">An infinite amount of vacant spaces!</p>
     </header>
     <div class="break-line">
 </body>
