--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="assets/icon.svg">
-    <link rel="stylesheet" href="/public/styles/style.css">
     <title>Course Makery</title>
     </style>
 </head>
@@ -18,27 +17,78 @@
                 <img src="assets/icon.svg" alt="w-logo">
                 Course Makery
             </a>
-
             <div class="nav-links">
                 <a href="#">About us</a>
                 <a href="#">Docs</a>
+                <a href="#">Go buy a course </a>
                 <a href="#">Funny pics</a>
                 <a href="#">Feedback</a>
-                <a id="gh-link" href="https://github.com/m1ss1onBest/my-web"><img src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg" alt="github_logo"></a>
+                <a id="gh-link" href="https://github.com/m1ss1onBest/my-web"><img
+                        src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg"
+                        alt="github_logo"></a>
             </div>
-
         </nav>
+
         <div class="header-space centered">
-            <h2>Course Makery</h2>
-            <p>The best way to waste your money on useless paid IT-courses. Learn about how to tell everyone that you're programmer when you're not.</p>
+            <h1>Course Makery</h1>
+            <p>The best way to waste your money on useless paid IT-courses. Learn about how to tell everyone that you're
+                programmer when you're not.</p>
         </div>
         <div class="buy-course-buttons">
-            <a href="#">Go buy a course</a>
-            <a href="#">Go buy a course</a>
-            <a href="#">Go buy a course</a>
+            <a id="link-button" href="https://accounts.binance.com/en/login?loginChannel=&return_to=">Go buy a course</a>
         </div>
-        <p class="vacant-places">An infinite amount of vacant spaces!</p>
+        <p class="vacant-places">An infinite amount of vacant places!</p>
+
     </header>
-    <div class="break-line">
+    <div class="code-dark">
+        <div class="description">
+            <h2>The Scam Master</h2>
+            <p>Become the smartest scammer in the world.<br><br>You will learn how to speak with a strong Indian
+                accent and convince people to buy your useless garbage.</p>
+        </div>
+        <div class="pict">
+            <img src="https://i.scdn.co/image/ab6775700000ee8567190dbd6150d6c1487e952c" alt="funny-picture">
+        </div>
+    </div>
+
+    <div class="code-light">
+        <div class="pict">
+            <img src="https://dac.digital/wp-content/uploads/2023/12/senior_software_developer-optimized.jpeg" alt="funny-picture">
+        </div>
+
+        <div class="description">
+            <h2>Zero to Hero</h2>
+            <p>Become a React Senior developer with 7+ years of experience in 5 months!<br><br>
+            You'll learn how to Google professionally and send prompts to ChatGPT at the senior developer level.</p>
+        </div>
+    </div>
+
+    <div class="code-dark">
+        <div class="description">
+            <h2>The Legacy Code Ambassador</h2>
+            <p>Unmaintainable code is not a bug but a feature! No obfuscation needed! <br><br>
+            You'll learn how to use all existing encryption methods to make your code secure and protected from everyone (even you).</p>
+        </div>
+        <div class="pict">
+            <img src="https://content.imageresizer.com/images/memes/Thomas-airplane-meme-meme-8.jpg" alt="funny-picture">
+        </div>
+    </div>
+
+    <div class="wanna-buy-course">
+        <h2>Wanna buy a course now?</h2>
+        <div class="buy-course-buttons">
+            <a id="link" href="https://accounts.binance.com/en/login?loginChannel=&return_to=">Buy a course! Now!</a>
+        </div>
+    </div>
+
+    <div class="end">
+
+        <h2>sdfdf</h2>
+    </div>
+
+    <footer>
+        <h2>I had no idea what to put here but this is Footer.</h2>
+    </footer>
 </body>
+
 </html>
