--- a/src/views/index.html
+++ b/src/views/index.html
@@ -87,7 +87,8 @@
     </section>
 
     <div class="end">
-        
+        <h2 class="end__text">The best website you've ever seen</h2>
+        <p class="end__text">I have no idea what to put here but this thing is jus for design</p>
     </div>
 
     <footer class="footer">
