--- a/src/views/index.html
+++ b/src/views/index.html
@@ -21,7 +21,7 @@
                 <a class="header__menu-link" href="#">Docs</a>
                 <a class="header__menu-link" href="#">Go buy a course</a>
                 <a class="header__menu-link" href="#">Funny pics</a>
-                <a class="header__menu-link" href="#">Feedback</a>
+                <a class="header__menu-link" href="feedbacks">Feedback</a>
                 <a class="header__menu-link header__menu-link--icon" href="https://github.com/m1ss1onBest/my-web">
                     <img class="header__menu-icon"
                         src="https://upload.wikimedia.org/wikipedia/commons/2/24/Github_logo_svg.svg" alt="github_logo">
