refactor/better-scss-style

--- a/src/views/feedbacks.html
+++ b/src/views/feedbacks.html
@@ -40,6 +40,7 @@
             <label for="email">Email: </label>
             <input type="text" id="email" name="email" placeholder="your email"><br><br>
             <label for=""></label><br>
+            <!-- <label for="comment">Leave your comment: </label> -->
             <textarea class="form__textform" name="comment" id="comment" cols="30" rows="10"></textarea><br>
             <button id="submit">Send feedback</button>
         </form>
