--- a/src/views/feedbacks.html
+++ b/src/views/feedbacks.html
@@ -46,6 +46,31 @@
         </form>
     </section>
 
+    <section class="comments">
+        <ul class="comments__list" id="comment-list">
+
+            <script src="somescript.js"></script>
+            <!-- an example of a comment -->
+            <li class="list__item">
+                <p class="item__username">Uname</p>
+                <p class="item__message">Best website ever</p>
+            </li>
+            <!--  -->
+            <li class="list__item">
+                <p class="item__username">Uname</p>
+                <p class="item__message">Best website ever</p>
+            </li>
+            <li class="list__item">
+                <p class="item__username">Uname</p>
+                <p class="item__message">Best website ever</p>
+            </li>
+            <li class="list__item">
+                <p class="item__username">Uname</p>
+                <p class="item__message">Best website ever</p>
+            </li>
+        </ul>
+    </section>
+
     <footer class="footer">
         <h2 class="footer__text">I had no idea what to put here but this is Footer.</h2>
     </footer>
