--- a/src/views/feedbacks.html
+++ b/src/views/feedbacks.html
@@ -51,23 +51,10 @@
 
             <script src="somescript.js"></script>
             <!-- an example of a comment -->
-            <li class="list__item">
+            <!-- <li class="list__item">
                 <p class="item__username">Uname</p>
                 <p class="item__message">Best website ever</p>
-            </li>
-            <!--  -->
-            <li class="list__item">
-                <p class="item__username">Uname</p>
-                <p class="item__message">Best website ever</p>
-            </li>
-            <li class="list__item">
-                <p class="item__username">Uname</p>
-                <p class="item__message">Best website ever</p>
-            </li>
-            <li class="list__item">
-                <p class="item__username">Uname</p>
-                <p class="item__message">Best website ever</p>
-            </li>
+            </li> -->
         </ul>
     </section>
 
