--- a/src/views/feedbacks.html
+++ b/src/views/feedbacks.html
@@ -48,8 +48,7 @@
 
     <section class="comments">
         <ul class="comments__list" id="comment-list">
-
-            <script src="somescript.js"></script>
+            <script src="fill_comments.js"></script>
             <!-- an example of a comment -->
             <!-- <li class="list__item">
                 <p class="item__username">Uname</p>
