--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -189,3 +189,26 @@ body {
         padding: 35px;
     }
 }
+
+@media (max-width: 670px) {
+    .header__menu-link:not(.header__menu-link--icon) {
+        display: none;
+
+    }
+
+    .course__image img {
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-width: 530px) {
+    .course__description, 
+    .course__image {
+        width: 100%;
+    }
+
+    .course__item {
+        flex-direction: column;
+    }
+}
