small design fixes

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -19,7 +19,7 @@
             </a>
             <div class="header__menu">
                 <a class="header__menu-link" href="aboutus">About us</a>
-                <a class="header__menu-link" href="docs">Docs</a>
+                <!-- <a class="header__menu-link" href="docs">Docs</a> -->
                 <a class="header__menu-link" href="https://accounts.binance.com/en/login?loginChannel=&return_to=">Go buy a course</a>
                 <a class="header__menu-link" href="funnypics">Funny pics</a>
                 <a class="header__menu-link" href="feedbacks">Feedback</a>
@@ -36,8 +36,8 @@
                 <span></span>
             </button>
             <div class="header__menu-mobile">
-                <a class="header__menu-link" href="aboutus">About us</a>
-                <a class="header__menu-link header__menu-link--icon" href="docs">Docs</a>
+                <a class="header__menu-link header__menu-link--icon" href="aboutus">About us</a>
+                <!-- <a class="header__menu-link header__menu-link--icon" href="docs">Docs</a> -->
                 <a class="header__menu-link header__menu-link--icon" href="https://accounts.binance.com/en/login?loginChannel=&return_to=">Go buy a course</a>
                 <a class="header__menu-link header__menu-link--icon" href="funnypics">Funny pics</a>
                 <a class="header__menu-link header__menu-link--icon" href="feedbacks">Feedback</a>
@@ -62,6 +62,7 @@
         <p class="header__vacant">An infinite amount of vacant places!</p>
     </header>
 
+    <!-- the content of the website -->
     <section class="course">
         <div class="course__item course__item--dark">
             <div class="course__description">
