--- a/src/scss/feedbacks.scss
+++ b/src/scss/feedbacks.scss
@@ -26,7 +26,7 @@
         background: linear-gradient(135deg, var(--color-bg-gradient1), var(--color-bg-gradient2));
         border-radius: 15px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-        max-width: 50%;
+        // max-width: 50%;
         width: 100%;
 
         label {
